--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
@@ -70,9 +70,6 @@
             [Bindable]
             private var selected:Location;
 
-            [Bindable]
-            private var listLocationGroups:ArrayCollection=new ArrayCollection();
-
             private function onShow():void {
                 if (commonModelLocator.allLocationTypes.length == 0) {
                 	dispatchEvent(new LocationTypeEvent(LocationTypeEvent.LOAD_ALL_LOCATION_TYPES));
@@ -80,7 +77,7 @@
                 if (commonModelLocator.allLocationGroups.length == 0) {
                 	dispatchEvent(new LocationGroupEvent(LocationGroupEvent.LOAD_ALL_LOCATION_GROUPS));
                 }
-                dispatchEvent(new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS));
+                reload();
             }
 
             private function onRowClick(event:ListEvent):void {
@@ -113,10 +110,9 @@
             /**
              * Action on button refresh Loactions.
              */
-            private function refresh():void {
+            private function reload():void {
             	selected = null;
-                var event:LocationEvent = new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS);
-                dispatchEvent(event);
+                dispatchEvent(new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS));
             }
             
             private function removeMessage(event:MouseEvent) : void {
@@ -156,7 +152,7 @@
         <mx:VRule height="10"/>
         <mx:Button id="saveLocationBtn" enabled="{identity.ifAllGranted('COMMON_save_location_button')}" buttonMode="true" mouseChildren="false" toolTip="Save an existing Location" icon="@Embed(source='/assets/images/Location--Save.png')" click="saveLocation()"/>
         <mx:VRule height="10"/>
-        <mx:Button id="refreshLocationBtn" buttonMode="true" mouseChildren="false" toolTip="Refresh the list of Locations" icon="@Embed(source='assets/images/icons/refresh.png')" click="refresh()"/>
+        <mx:Button id="refreshLocationBtn" buttonMode="true" mouseChildren="false" toolTip="Reload the list of Locations" icon="@Embed(source='assets/images/icons/refresh.png')" click="reload()"/>
     </mx:HBox>
     <mx:HRule x="9" y="53" width="95%"/>
     <mx:HBox height="100%" width="95%" x="10" y="63">
