--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/UserManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/UserManagementView.mxml
@@ -23,10 +23,10 @@
 -->
 <mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:view="org.openwms.web.flex.client.view.*"
 	xmlns:management="org.openwms.web.flex.client.view.management.*" xmlns:renderer="org.openwms.web.flex.client.view.renderers.*"
-	width="100%" height="100%" creationComplete="init()">
+	width="100%" height="100%" creationComplete="onCreate()">
 
     <mx:Metadata>
-        [Name("userManagementView")]
+        [Name]
         [ManagedEvent(name="SAVE_MODULE")]
         [ManagedEvent(name="DELETE_MODULE")]
         [ManagedEvent(name="LOAD_MODULE")]
@@ -42,16 +42,17 @@
             import org.granite.tide.spring.Context;
             import org.openwms.web.flex.client.event.UserEvent;
 
-            [In]
-            public var tideContext:Context;
-            [In]
+            [Inject]
             [Bindable]
+            /**
+             * Injected Model.
+             */
             public var modelLocator : ModelLocator;
             
             /**
              * Load all users when the view is loaded.
              */
-            private function init():void {
+            private function onCreate() : void {
             	if (modelLocator.allRoles.length == 0) {
                     dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS));
                 }
