--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/CreateRoleDialog.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/CreateRoleDialog.mxml
@@ -21,42 +21,45 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="400" height="250" title="Create Role" backgroundColor="#F1F07C" creationComplete="init();">
+<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" title="{I18nUtil.trans(I18nUtil.APP_MAIN, 'txt_create_role_title')}"
+ backgroundColor="#F1F07C" creationComplete="init();" width="400" height="250" layout="absolute">
 
     <mx:Metadata>
-        [Name("createRoleDialog")]
+        [Name]
         [ManagedEvent(name="ADD_ROLE")]
         [ManagedEvent(name="SAVE_ROLE")]
+        [ResourceBundle("appMain")]
     </mx:Metadata>
 
     <mx:Script>
     	<![CDATA[
+            import flash.events.KeyboardEvent;
     		import mx.binding.utils.BindingUtils;
+            import mx.managers.PopUpManager;
     		import mx.controls.Alert;
     		import mx.events.ValidationResultEvent;
+
     		import org.openwms.core.domain.system.usermanagement.Role;
     		import org.openwms.web.flex.client.event.RoleEvent;
             import org.openwms.web.flex.client.model.ModelLocator;
-
-            import mx.managers.PopUpManager;
-            import flash.events.KeyboardEvent;
+            import org.openwms.web.flex.client.util.I18nUtil;
             
             [Inject]
             [Bindable]
             /**
              * Inject the model.
              */
-            public var modelLocator:ModelLocator;
+            public var modelLocator : ModelLocator;
             
             [Bindable]
             /**
              * Use this dialogue to edit an existing Role and pass in the Role to change.
              */
-            public var roleToChange:Role;
+            public var roleToChange : Role;
             
-            private function init():void {
+            protected function init() : void {
             	if (roleToChange != null) {
-            		createBtn.label = "Save";
+            		createBtn.label = I18nUtil.trans(I18nUtil.APP_MAIN, "btn_save");
             		nameTxt.text = roleToChange.name;
             		descriptionTxt.text = roleToChange.description;
             	}
@@ -65,12 +68,12 @@
                 PopUpManager.centerPopUp(this);
             }
 
-            private function submit():void {
+            protected function submit() : void {
             	if (stringVal.validate().type == ValidationResultEvent.VALID) {
             		var event:RoleEvent;
             		if (roleToChange == null) {
                         event = new RoleEvent(RoleEvent.ADD_ROLE);
-                        var role:Role = new Role(formatRoleName(nameTxt.text), descriptionTxt.text);
+                        var role : Role = new Role(formatRoleName(nameTxt.text), descriptionTxt.text);
                         event.data = role;
                         dispatchEvent(event);
                     }
@@ -87,32 +90,36 @@
                 nameTxt.setFocus();
             }
             
-            private function formatRoleName(roleName:String):String {
-            	var result:String = roleName.toUpperCase();
-            	if (result.substring(0,5) != "ROLE_") {
-            		result = "ROLE_"+result;
+            protected function cancel(event : Event) : void {
+                closeDialog(event);
+            }            
+            
+            private function formatRoleName(roleName : String) : String {
+            	var result : String = roleName.toUpperCase();
+            	if (result.substring(0,Role.PREFIX.length) != Role.PREFIX) {
+            		result = Role.PREFIX + result;
             	}
             	return result;
             }
 
-            private function closeDialog(event:Event=null):void {
+            private function closeDialog(event : Event = null) : void {
                 this.removeEventListener(KeyboardEvent.KEY_DOWN, keyEventHandler);
                 PopUpManager.removePopUp(this);
             }
 
-            private function keyEventHandler(event:KeyboardEvent):void {
-                if(event.keyCode == 27) {
+            private function keyEventHandler(event : KeyboardEvent) : void {
+                if (event.keyCode == 27) {
                    closeDialog(event);
                 }
             }
             
+            [Observer("ROLE_ADDED")]
             /**
              * When a Role was successfully added reset the form to add a new Role.
              * 
              * @param event unused
              */
-            [Observer("ROLE_ADDED")]
-            public function onRoleAdded(event:RoleEvent):void {
+            public function onRoleAdded(event : RoleEvent) : void {
             	nameTxt.text = "";
             	descriptionTxt.text = "";
             	nameTxt.setFocus();
@@ -122,15 +129,15 @@
     
     <mx:StringValidator id="stringVal" minLength="1" source="{nameTxt}" property="text"/>
     
-	<mx:Label x="10" y="10" text="Role" fontSize="22" width="140" textAlign="right"/>
+	<mx:Label x="10" y="10" text="{I18nUtil.trans(I18nUtil.APP_MAIN, 'entity_role_name')}" fontSize="22" width="140" textAlign="right"/>
     <mx:TextInput id="nameTxt" width="200" fontSize="22" x="158" y="8" />
 
-	<mx:Label x="10" y="51" text="Description" fontSize="22" width="140" textAlign="right"/>
+	<mx:Label x="10" y="51" text="{I18nUtil.trans(I18nUtil.APP_MAIN, 'entity_role_description')}" fontSize="22" width="140" textAlign="right"/>
     <mx:TextArea id="descriptionTxt" x="158" y="50" width="200" height="73" fontSize="22" />
 
 	<mx:HBox x="0" y="175" width="100%" horizontalAlign="center">
-		<mx:Button id="createBtn" label="Create" fontSize="12" click="submit()"/>
-		<mx:Button id="cancelBtn" label="Cancel" fontSize="12" click="closeDialog(event)"/>
+		<mx:Button id="createBtn" label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'btn_create')}" fontSize="12" click="submit()"/>
+		<mx:Button id="cancelBtn" label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'btn_cancel')}" fontSize="12" click="cancel(event)"/>
 	</mx:HBox>
 	
 </mx:TitleWindow>
