--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
@@ -21,89 +21,83 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" width="300" height="220" backgroundColor="#FFFFFF"
-	backgroundAlpha="0.5" borderStyle="solid" alpha="1" borderThickness="3" title="Application Login" show="onShow();" creationComplete="onShow();">
+<mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" backgroundColor="#FFFFFF" backgroundAlpha="0.5" borderStyle="solid" alpha="1"
+ borderThickness="3" title="{I18nUtil.trans(I18nUtil.APP_MAIN, 'txt_login_title')}" show="onShow();" creationComplete="onShow();" width="300" height="220">
 
     <mx:Metadata>
         [Name]
         [ManagedEvent(name="APP_LOGIN_OK")]
+        [ResourceBundle("appMain")]
     </mx:Metadata>
 
 	<mx:Script>
         <![CDATA[
+            import flash.utils.Proxy;
             import mx.controls.Alert;
             import mx.managers.PopUpManager;
+
             import org.granite.tide.events.TideResultEvent;
             import org.granite.tide.events.TideFaultEvent;
             import org.granite.tide.spring.Identity;
+
             import org.openwms.core.domain.system.usermanagement.User;
             import org.openwms.web.flex.client.event.ApplicationEvent;
             import org.openwms.web.flex.client.model.ModelLocator;
-            import org.openwms.web.flex.client.model.I18nMap;
-            import flash.utils.Proxy;
+            import org.openwms.web.flex.client.util.I18nUtil;
+            
             [Inject]
             [Bindable]
             /**
              * Injected Granite identity object.
              */
-            public var identity:Identity;
-            [In]
+            public var identity : Identity;
+            [Inject]
             [Bindable]
             /**
              * Injected Model.
              */
             public var modelLocator : ModelLocator;
-            [In("i18nMap")]
             [Bindable]
-            /**
-             * Injected i18n;
-             */
-            public var i18n : I18nMap;
-            [Bindable]
-            public var loginMessageText:String = "";
+            public var loginMessageText : String = "";
             
-            private function onShow():void {
-                //identity.logout();
+            private function onShow() : void {
             	myUser.setFocus();
                 PopUpManager.centerPopUp(this);
             }
             
-            private function onLogin(username:String, password:String):void {
-                if (modelLocator.SCREEN_LOCKED) {
-                    if (modelLocator.viewLockedBy != username) {
-                        //Alert.show(i18n['core_allg_text']+ modelLocator.viewLockedBy +" can unlock the application");
-                        return;
-                    }
+            private function onLogin(username : String, password : String) : void {
+                if (modelLocator.SCREEN_LOCKED &&
+                    modelLocator.viewLockedBy != username) {
+                    return;
                 }
                 identity.login(username, password, loginOk, loginError);        
             }
 
-            private function loginOk(event:TideResultEvent):void {
+            private function loginOk(event : TideResultEvent) : void {
                 loginMessageText = null;
                 dispatchEvent(new ApplicationEvent(ApplicationEvent.APP_LOGIN_OK));
                 PopUpManager.removePopUp(this);
             }
         
-            private function loginError(event:TideFaultEvent):void {
+            private function loginError(event : TideFaultEvent) : void {
                 loginMessageText = event.fault.faultString;
                 myPass.text = "";
                 myPass.setFocus();
             }
-
         ]]>
 	</mx:Script>
 
 	<mx:Form width="100%" height="100%">
-		<mx:FormHeading label="LOGIN" />
-		<mx:FormItem label="User">
-			<mx:TextInput id="myUser" />
+		<mx:FormHeading label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_login_title')}" />
+		<mx:FormItem label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_login_username')}">
+			<mx:TextInput id="myUser" enter="myPass.setFocus();"/>
 		</mx:FormItem>
-		<mx:FormItem label="Password">
+		<mx:FormItem label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'lbl_login_password')}">
 			<mx:TextInput id="myPass" displayAsPassword="true" enter="onLogin(myUser.text, myPass.text)"/>
 		</mx:FormItem>
 		<mx:Text text="{loginMessageText}"/>
 		<mx:FormItem>
-			<mx:Button label="Login" click="onLogin(myUser.text, myPass.text)" />
+			<mx:Button label="{I18nUtil.trans(I18nUtil.APP_MAIN, 'btn_login')}" click="onLogin(myUser.text, myPass.text)" />
 		</mx:FormItem>
 	</mx:Form>
 
